# VoiceRaiseController

./: .clang-format  CMakeLists.txt  main_gui.cpp  vcpkg.json
src/: DecibelListener.cpp  DecibelListener.hpp
src/app/: main.cpp
src/audio/: DecibelListener.cpp  DecibelListener.hpp  Notifier.cpp  Notifier.hpp
src/gui/: App.cpp  App.hpp
